--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 </head>
 <body>
     <div class="hero-video noselect">
-        <video id="video" playsinline autoplay muted loop disablepictureinpicture disableremoteplayback src="assets/deltarune.mp4"></video>
+        <video id="video" playsinline autoplay muted loop disablepictureinpicture disableremoteplayback src="assets/dark_fountain.mp4"></video>
     </div>
     <div class="page">
     <h1 class="title"><center>skillissue.go, common case of skill issue.</center></h1>
