--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>A Website</title>
+    <title>My Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta property="og:title" content="Just 1 more dev."/>
     <meta property="og:type" content="website"/>
@@ -253,21 +253,24 @@
     </div>
     <div class="page">
     <h1 class="title"><center>skillissue.go, common case of skill issue.</center></h1>
-    <p>Extreme case of skill issue developer, as always.</p>
-    <h2>the only things i know and use:</h2>
-    <p>my brain only knows these languages</p>
+    <p>Just a lego game developer, as always.</p>
+    <h2>Experince:</h2>
+    <p>Currently only know:</p>
     <ul>
         <li><img src="./assets/lua.svg" title="Lua logo" height="0.5em"> Lua</li>
         <li><img src="./assets/python.svg" title="python logo" height="0.5em"> Python</li>
     </ul>
-
-      
-    </ul>
+        <ul>
+<h2>About me</h2>
+    <p>Hi there, I'm Relevant. Just one of those proffesional idiots on github.</p>
+    <p>Only coding in Lua and Python, but planning to reach to C or to learn more python.<br/>Currently trying to setup a cool website/Universal whitelist dashboard.</p>
+    <p>I play Minecraft, play (and develop) in roblox </p>
+     </ul>
     <h2>Me</h2>
     <ul>
-        <li>unpaid at:</li>
+        <li>Unpaid at:</li>
         <ul>
-            <li>Lead dev in <a href="https://discord.gg/TsHWqK6T9W">Acronisware</a></li>
+            <li><a href="https://discord.gg/acronisware">Acronisware</a></li>
         </ul>
 </div>
 </body>
