--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>My Website</title>
+    <title>Just a website.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta property="og:title" content="Just 1 more dev."/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://skillissue.go/"/>
-    <meta property="og:image" content="https://pog5.me/res/rave.gif"/>
+    <meta property="og:url" content="https://Guilded1.github.io"/>
     <style>
         .page {
             background: #1e1e2e;
