--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <video id="video" playsinline autoplay muted loop disablepictureinpicture disableremoteplayback src="assets/dark_fountain.mp4"></video>
     </div>
     <div class="page">
-    <h1 class="title"><center>skillissue.go, common case of skill issue.</center></h1>
+    <h1 class="title"><center>Guilded1.github.io: Too dumb to make a custom domain.</center></h1>
     <p>Just a lego game developer, as always.</p>
     <h2>Experince:</h2>
     <p>Currently only know:</p>
