--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
      </ul>
     <h2>Me</h2>
     <ul>
-        <li>Unpaid at:</li>
+        <li>Current spots I work (unpaid) at:</li>
         <ul>
             <li><a href="https://discord.gg/acronisware">Acronisware</a></li>
         </ul>
