--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     </ul>
         <ul>
 <h2>About me</h2>
-    <p>Hi there, I'm Relevant. Just one of those proffesional idiots on github.</p>
+    <p>Hi, I'm Relevant. Just one of those professional idiots on github.</p>
     <p>Only coding in Lua and Python, but planning to reach to C or to learn more python.<br/>Currently trying to setup a cool website/Universal whitelist dashboard.</p>
     <p>I play Minecraft, play (and develop) in roblox </p>
      </ul>
