--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
     <div class="page">
     <h1 class="title"><center>Relevant: Too dumb to make a custom domain.</center></h1>
     <p>Just a lego game developer, as always.</p>
+   <p class="st"><center><a href="https://discordid.netlify.app/?id=776991770977894421">Discord</a></center></p>
     <h2>Experince:</h2>
     <p>Currently only know:</p>
     <ul>
@@ -263,7 +264,11 @@
 <h2>About me</h2>
     <p>Hi, I'm Relevant. Just one of those professional idiots on github.</p>
     <p>Only coding in Lua and Python, but planning to reach to C or to learn more python.<br/>Currently trying to setup a cool website/Universal whitelist dashboard.</p>
-    <p>I play Minecraft, play (and develop) in roblox </p>
+    <p>I play Minecraft, play (and develop) in roblox.</p>
+     </ul>
+        <ul>
+<h2>Updates:</h2>
+    <p>No current updates.</p>
      </ul>
     <h2>Me</h2>
     <ul>
