--- a/redirect/index.html
+++ b/redirect/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <script>
-        window.location.href = `https://discord.com/oauth2/authorize?client_id=1128504467961163776&redirect_uri=https%3A%2F%2Fyour-github-username.github.io%2Fdiscord-redirect%2F&response_type=code&scope=identify`;
+        window.location.href = `https://discord.com/oauth2/authorize?client_id=1128504467961163776&redirect_uri=https%3A%2F%2Fguilded1.github.io%2Fredirect%2F&response_type=code&scope=identify`;
     </script>
 </body>
 </html>
