--- a/spotifyredirect/index.html
+++ b/spotifyredirect/index.html
@@ -6,7 +6,7 @@
     <title>Spotify Redirect</title>
 </head>
 <body>
-    <p id="accessTokenDisplay">Code: </p>
+    <p id="accessTokenDisplay">Token (copy and paste this): </p>
 
     <script>
         // Function to parse query parameters from the URL fragment
