--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <video id="video" playsinline autoplay muted loop disablepictureinpicture disableremoteplayback src="assets/dark_fountain.mp4"></video>
     </div>
     <div class="page">
-    <h1 class="title"><center>Relevant: Too dumb to make a custom domain.</center></h1>
+    <h1 class="title"><center>This took 3 minutes to make.</center></h1>
     <p>Just a lego game developer, as always.</p>
    <p class="st"><center><a href="https://discordid.netlify.app/?id=776991770977894421">Discord</a></center></p>
     <h2>Experince:</h2>
