--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Just a website.</title>
+    <title>Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta property="og:title" content="Just 1 more dev."/>
     <meta property="og:type" content="website"/>
@@ -251,7 +251,7 @@
         <video id="video" playsinline autoplay muted loop disablepictureinpicture disableremoteplayback src="assets/dark_fountain.mp4"></video>
     </div>
     <div class="page">
-    <h1 class="title"><center>This took 3 minutes to make.</center></h1>
+    <h1 class="title"><center>Cool github page (also my profile)</center></h1>
     <p>Just a lego game developer, as always.</p>
    <p class="st"><center><a href="https://discordid.netlify.app/?id=776991770977894421">Discord</a></center></p>
     <h2>Experince:</h2>
