--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Website</title>
+    <title>Cool website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta property="og:title" content="Just 1 more dev."/>
+    <meta property="og:title" content="Cool page check it out"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://Guilded1.github.io"/>
     <style>
@@ -262,8 +262,8 @@
     </ul>
         <ul>
 <h2>About me</h2>
-    <p>Hi, I'm Relevant. Just one of those professional idiots on github.</p>
-    <p>Only coding in Lua and Python, but planning to reach to C or to learn more python.<br/>Currently trying to setup a cool website/Universal whitelist dashboard.</p>
+    <p>Garbage lua developer</p>
+    <p>Only coding in Lua and Python, but planning to reach to C or to learn more python.<br/>Currently trying to setup a Universal dashboard.</p>
     <p>I play Minecraft, play (and develop) in roblox.</p>
      </ul>
         <ul>
