--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <ul>
         <li>Current spots I work (unpaid) at:</li>
         <ul>
-            <li><a href="https://discord.gg/lithiumv1">lithium</a></li>
+            <li><a href="https://discord.gg/lithiumv1">Lithium</a></li>
         </ul>
 </div>
 </body>
