--- a/index.html
+++ b/index.html
@@ -263,12 +263,12 @@
         <ul>
 <h2>About me</h2>
     <p>Garbage lua developer</p>
-    <p>Only coding in Lua and Python, but planning to reach to C or to learn more python.<br/>Currently trying to setup a Universal dashboard.</p>
-    <p>I play Minecraft, play (and develop) in roblox.</p>
+    <p>in my freetime i usually develop roblox stuff, sometimes work on python projects if i have nothing to do</p>
+    <p>I play Minecraft, play (and develop) in roblox. <p class="st"><center><a href="https://www.roblox.com/games/13789555854/Vectus-Testing">Game being worked on</a></p></p>
      </ul>
         <ul>
 <h2>Updates:</h2>
-    <p>No current updates.</p>
+    <p>uhh its my birthday so</p>
      </ul>
     <h2>Me</h2>
     <ul>
