--- a/index.html
+++ b/index.html
@@ -264,17 +264,17 @@
 <h2>About me</h2>
     <p>Garbage lua developer</p>
     <p>in my freetime i usually develop roblox stuff, sometimes work on python projects if i have nothing to do</p>
-    <p>I play Minecraft, play (and develop) in roblox. <p class="st"><center><a href="https://www.roblox.com/games/13789555854/Vectus-Testing">Game being worked on</a></p></p>
+    <p>I play Minecraft, play (and develop) in roblox. <p class="st"><center><a href="https://www.roblox.com/games/13789555854/Vectus-Testing">Game being worked on (Discontinued)</a></p></p>
      </ul>
         <ul>
 <h2>Updates:</h2>
-    <p>uhh its my birthday so</p>
+    <p>None currently.</p>
      </ul>
     <h2>Me</h2>
     <ul>
         <li>Current spots I work (unpaid) at:</li>
         <ul>
-            <li><a href="https://discord.gg/lithiumv1">Lithium</a></li>
+            <p>Lithium (Unlinked)</p>
         </ul>
 </div>
 </body>
