--- a/testchat/index.html
+++ b/testchat/index.html
@@ -45,7 +45,7 @@
 </div>
 
 <script>
-  const socket = new WebSocket("ws://localhost:3000");
+  const socket = new WebSocket("wss://guilded1.github.io");
 
   socket.addEventListener("open", (event) => {
     console.log("WebSocket connection opened:", event);
