Update index.html (finally)

--- a/index.html
+++ b/index.html
@@ -251,31 +251,22 @@
         <video id="video" playsinline autoplay muted loop disablepictureinpicture disableremoteplayback src="assets/dark_fountain.mp4"></video>
     </div>
     <div class="page">
-    <h1 class="title"><center>Cool github page (also my profile)</center></h1>
-    <p>Just a lego game developer, as always.</p>
+    <h1 class="title"><center>Console.WriteLine("Silly bio");</center></h1>
    <p class="st"><center><a href="https://discordid.netlify.app/?id=776991770977894421">Discord</a></center></p>
-    <h2>Experince:</h2>
-    <p>Currently only know:</p>
+    <h2>Programming languages:</h2>
     <ul>
         <li><img src="./assets/lua.svg" title="Lua logo" height="0.5em"> Lua</li>
         <li><img src="./assets/python.svg" title="python logo" height="0.5em"> Python</li>
+        <li><img src="./assets/C_Logo[1].png" title="C logo" height="0.5em"> C</li>
+        <li><img src="./assets/C++-Logo.wine[1].png" title="C++ logo" height="0.5em"> C++</li>
+        <li><img src="./assets/kisspng-javascript-programmer-node-js-web-application-vector-markup-language-5b173fc1d0a463.9294246915282503058546[1].jpg" title="JS logo" height="0.5em"> Javascript</li>
     </ul>
         <ul>
 <h2>About me</h2>
     <p>Garbage lua developer</p>
-    <p>in my freetime i usually develop roblox stuff, sometimes work on python projects if i have nothing to do</p>
-    <p>I play Minecraft, play (and develop) in roblox. <p class="st"><center><a href="https://www.roblox.com/games/13789555854/Vectus-Testing">Game being worked on (Discontinued)</a></p></p>
+    <p>making c++ "reverse engineer" programs (IDA, Dnspy etc) and anticheats for those same stuff</p>
+    <p>a bit of network "hacking" (nmap, recon tools), and yes i have metasploit open 24/7</p>
      </ul>
-        <ul>
-<h2>Updates:</h2>
-    <p>None currently.</p>
-     </ul>
-    <h2>Me</h2>
-    <ul>
-        <li>Current spots I work (unpaid) at:</li>
-        <ul>
-            <p>Lithium (Unlinked)</p>
-        </ul>
 </div>
 </body>
 </html>
