--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 <h2>About me</h2>
     <p>Garbage lua developer</p>
     <p>making c++ "reverse engineer" programs (IDA, Dnspy etc) and anticheats for those same stuff</p>
-    <p>a bit of network "hacking" (nmap, recon tools), and yes i have metasploit open 24/7</p>
+    <p>a bit of network "hacking", aka nmap, wireshark and other "network hacking" tools (and yes, i have metasploit open 24/7)</p>
      </ul>
 </div>
 </body>
