--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
         <li><img src="./assets/lua.svg" title="Lua logo" height="0.5em"> Lua</li>
         <li><img src="./assets/python.svg" title="python logo" height="0.5em"> Python</li>
         <li><img src="./assets/C_Logo[1].png" title="C logo" height="0.5em"> C</li>
-        <li><img src="./assets/C++-Logo.wine[1].png" title="C++ logo" height="0.5em"> C++</li>
-        <li><img src="./assets/kisspng-javascript-programmer-node-js-web-application-vector-markup-language-5b173fc1d0a463.9294246915282503058546[1].jpg" title="JS logo" height="0.5em"> Javascript</li>
+        <li><img src="./assets/cpp_logo.svg" title="C++ logo" height="0.5em"> C++</li>
+        <li><img src="./assets/javascript-icon-logo-javascript-often-abbreviated-as-js-programming-language-conforms-to-ecmascript-specification-204759326[1].jpg" title="JS logo" height="0.5em"> Javascript</li>
     </ul>
         <ul>
 <h2>About me</h2>
